<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:minHeight="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987">

        <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="300dp"
            android:layout_height="62dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_border"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.207" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="300dp"
            android:layout_height="62dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpUsername"
            app:layout_constraintVertical_bias="0.102" />

        <EditText
            android:id="@+id/signUpConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="62dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
            app:layout_constraintVertical_bias="0.138" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="149dp"
            android:layout_height="52dp"
            android:background="@drawable/edittext_border"
            android:text="@string/signup"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.213"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPassword"
            app:layout_constraintVertical_bias="0.206" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="109dp"
            android:layout_height="56dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/signup"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/signUpUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.443" />

        <TextView
            android:id="@+id/redirectLogin"
            android:layout_width="231dp"
            android:layout_height="29dp"
            android:text="@string/already_registered_login"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.311"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            app:layout_constraintVertical_bias="0.317" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>